# Dolphin-Flashcard-App

./: .gitignore  API Documentation  CHANGELOG.md  CONTRIBUTING.md  DD  Dockerfile  LICENSE  README.md  _config.yml  bump_version.sh  card_presets.json  data.json  dolphin_cli.sh  firebase_config.json  firebase_emulator.ps1  firebase_emulator.sh  install_premium_repo.sh  knownBugs.md  node_requirements.txt  package-lock.json  package.json  requirements.txt  update_terraform.yml  validate_config_files.py
.github/: pull_request_template.md
.history/: CHANGELOG_20250303133130.md  CHANGELOG_20250303133227.md  CHANGELOG_20250303133234.md  CHANGELOG_20250303133325.md  CHANGELOG_20250303133329.md  CHANGELOG_20250303205902.md  CHANGELOG_20250303205911.md  CHANGELOG_20250303205919.md  (+35 more)
backend/: __init__.py  database_test.py  main.py  pyproject.toml
backend/classes/: ai_flashcard_generator.py  card.py  card_collection.py  date.py  flashcard_searcher.py
backend/database/: database.py  database_abstract.py  database_config.py  firebase_database.py  jwt_handler.py  local_database.py  shared_folder_jwt_handler.py
backend/database/handlers/: README.md  database_handler.py  flashcard_set.py  flashcards.py  folders.py  goals 1.py  goals.py  quests.py  read_write_access.py  shared_folder_sets.py  shared_folders.py  statistics.py  users.py
backend/routes/api/: authentication.py  card_management.py  goals.py  quests.py  regex_patterns.py  shared_folders.py  statistics.py  validation_wrapper.py
backend/routes/web/: web_routes.py
backend/verification/: api_error_checking.py
(+1362 files in other folders)
